tests/baselines/reference/taggedTemplateWithoutDeclaredHelper(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
foo.ts(5,23): error TS2343: This syntax requires an imported helper named '__makeTemplateObject' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== foo.ts (1 errors) ====
    function id<T>(x: T) {
      return x;
    }
    
    export const result = id `hello world`;
                          ~~~~~~~~~~~~~~~~
!!! error TS2343: This syntax requires an imported helper named '__makeTemplateObject' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    
==== ./node_modules/tslib/index.d.ts (0 errors) ====
    export { };
    